@@ -23,6 +23,30 @@ cd /D %~dp0
 call "%~dp0set-pentaho-env.bat"
 
 SET DI_HOME="%~dp0pentaho-solutions\system\kettle"
+set JAVA_ADD_OPENS=
+pushd "%_PENTAHO_JAVA_HOME%"
+if exist java.exe goto USEJAVAFROMPENTAHOJAVAHOME
+cd bin
+if exist java.exe goto USEJAVAFROMPENTAHOJAVAHOME
+popd
+pushd "%_PENTAHO_JAVA_HOME%\jre\bin"
+if exist java.exe goto USEJAVAFROMPATH
+GOTO USEJAVAFROMPATH
 
-"%_PENTAHO_JAVA%" -Xmx2048m -Dfile.encoding=utf8 -DDI_HOME="%DI_HOME%" -Dpentaho.disable.karaf=true -classpath "%~dp0tomcat\webapps\pentaho\WEB-INF\classes;%~dp0tomcat\webapps\pentaho\WEB-INF\lib\*" org.pentaho.platform.plugin.services.importexport.CommandLineProcessor %*
+:USEJAVAFROMPENTAHOJAVAHOME
+FOR /F %%a IN ('.\java.exe -version 2^>^&1^|%windir%\system32\find /C "version ""1.8."') DO (SET /a ISJAVA8=%%a)
+GOTO CONTINUE
+:USEJAVAFROMPATH
+FOR /F %%a IN ('java -version 2^>^&1^|%windir%\system32\find /C "version ""1.8."') DO (SET /a ISJAVA8=%%a)
+GOTO CONTINUE
+
+:CONTINUE
+popd
+IF %ISJAVA8%==1 GOTO SKIPADDOPENSASSIGNMENT
+
+REM Used to allow reflective access for Java 11
+set JAVA_ADD_OPENS=--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED
+
+:SKIPADDOPENSASSIGNMENT
+"%_PENTAHO_JAVA%" %JAVA_ADD_OPENS% -Xmx2048m -Dfile.encoding=utf8 -DDI_HOME="%DI_HOME%" -Dpentaho.disable.karaf=true -classpath "%~dp0tomcat\webapps\pentaho\WEB-INF\classes;%~dp0tomcat\webapps\pentaho\WEB-INF\lib\*" org.pentaho.platform.plugin.services.importexport.CommandLineProcessor %*
 
